# pinny-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
examples/: Cargo.toml
examples/consumer_01/: Cargo.toml
examples/consumer_01/src/: lib.rs  test01.rs  test02.rs
examples/consumer_02/: Cargo.toml
examples/consumer_02/src/: lib.rs
src/: config.rs  lib.rs  tag.rs
src/include/: macros.rs
src/tests/: config_test.rs  mod.rs  tag_test.rs
tests/: failures.rs  nominal.rs  thirdparty.rs
tests/failures/: f00_empty_tag.rs  f00_empty_tag.stderr  f01_not_allowed_tag.rs  f01_not_allowed_tag.stderr  f02_duplicated_tag.rs  f02_duplicated_tag.stderr  f03_multi_tag.rs  f03_multi_tag.stderr
tests/utils/: mod.rs
