[package]
name = "pinny"
version = "0.0.1"
authors = ["Federico De Felici <federico@bitcoinl2labs.com>"]
edition = "2021"
license = "GPLv3"
homepage = "https://github.com/BitcoinL2-Labs/pinny-rs"
repository = "https://github.com/BitcoinL2-Labs/pinny-rs"
description = "Tags your tests and run what matters"
keywords = [ "test", "testing", "tagging", "tag", "pinning" ]
readme = "README.md"
categories = [
  "development-tools::testing",
]

[lib]
proc-macro = true

[features]
default = []
debug = []

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
toml = "0.8"
thiserror = "1.0.56"   # used this version to avoid `syn` conflict with stacks-core
regex = "1"

[dev-dependencies]
tempfile = "3.3"
trybuild = "1.0.83"
serial_test = "2"

# Used for integration test purpose
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}

# Used for integration tests purpose
[package.metadata.pinny] 
allowed = ["tag1", "tag2"]